--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset=utf-8/>
+    <title>ic-05</title>
 </head>
 
 
 <body>
+<h1>Intro to JavaScript</h1>
 
+<button class="button">button</button>
+Number of times button clicked: 0
 
 </body>
 
