--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 <h1>Intro to JavaScript</h1>
 
-<button class="button">button</button>
-Number of times button clicked: 0
+<button type="button" onClick="buttonClicked()">click me</button>
+<div id="button-div" class="gen">Number of times button clicked: 0</div>
 
+<script src='main.js'></script>
 </body>
 
 <h2>Acknowledgements</h2>
